Fix blog post layout: load stylesheet and add content spacing
The Hugo upgrade changed .FirstSection string format from "Page(/blog)"
to "/blog", preventing blog_post.scss from loading. Also remove nested
.container classes causing triple padding, and add spacing for paragraphs,
headings, tables, code blocks, and list items.

--- a/assets/scss/blog_post.scss
+++ b/assets/scss/blog_post.scss
@@ -41,14 +41,51 @@ article {
     }
 }
 
+p {
+    margin-bottom: 1em;
+}
+
+h2 {
+    margin-top: 1.8em;
+    margin-bottom: 0.6em;
+}
+
+h3 {
+    font-size: 1.3em;
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+}
+
 ul,
 ol {
     padding-left: 3em;
     padding-right: 3em;
 }
 
+li {
+    margin-bottom: 0.4em;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 1.5em 0;
+    width: 100%;
+
+    th, td {
+        border: 1px solid #ddd;
+        padding: 0.5em 0.75em;
+        text-align: left;
+    }
+
+    th {
+        background-color: #f5f5f5;
+        font-weight: bold;
+    }
+}
+
 .highlight {
     font-size: 18px;
+    margin: 1.5em 0;
 
     pre {
         overflow-x: auto;
@@ -60,5 +97,16 @@ ol {
 
     table {
         padding: 1rem !important;
+        border: none;
+        margin: 0;
+
+        th, td {
+            border: none;
+            padding: 0;
+        }
     }
+}
+
+pre:not(.highlight pre) {
+    margin: 1.5em 0;
 }
